Fix misaligned vertical icons
+ remove unnecessary negative margins in favor of just letting flex align-center and `line-height: 0` do its thing

--- a/src/components/tree_view/tree_view.scss
+++ b/src/components/tree_view/tree_view.scss
@@ -3,13 +3,7 @@
 }
 
 .euiTreeView__iconWrapper {
-  margin-top: -($euiSizeXS / 2);
   margin-right: $euiSizeS;
-
-  // This helps tokens appear vertically centered
-  .euiToken {
-    margin-top: $euiSizeXS / 2;
-  }
 }
 
 .euiTreeView--compressed {
